# src/common/dto/response/vehicle-response.dto.ts
@@ -1,0 +1,33 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { Exclude, Expose } from 'class-transformer';
+
+@Exclude()
+export class VehicleResponseDto {
+  @Expose()
+  @ApiProperty()
+  _id: string;
+
+  @Expose()
+  @ApiProperty()
+  templateId: string;
+
+  @Expose()
+  @ApiProperty()
+  plateNumber: string;
+
+  @Expose()
+  @ApiProperty()
+  price: number;
+
+  @Expose()
+  @ApiProperty()
+  available: boolean;
+
+  @Expose()
+  @ApiProperty()
+  createdAt: Date;
+
+  @Expose()
+  @ApiProperty()
+  updatedAt: Date;
+}
