# swagger-spec.json
@@ -538,6 +538,172 @@
           "VehicleTemplate"
         ]
       }
+    },
+    "/api/vehicle/getVehicles": {
+      "get": {
+        "operationId": "VehicleController_getAllVehicles",
+        "parameters": [
+          {
+            "name": "page",
+            "required": false,
+            "in": "query",
+            "description": "Page Number",
+            "schema": {
+              "example": 2,
+              "type": "number"
+            }
+          },
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "description": "Number of items per page",
+            "schema": {
+              "example": 10,
+              "type": "number"
+            }
+          },
+          {
+            "name": "order",
+            "required": false,
+            "in": "query",
+            "description": "Order direction: ascending  (asc) veya descending (desc)",
+            "schema": {
+              "example": "asc",
+              "type": "string",
+              "enum": [
+                "asc",
+                "desc"
+              ]
+            }
+          },
+          {
+            "name": "templateId",
+            "required": false,
+            "in": "query",
+            "description": "Template ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "summary": "ADMIN",
+        "tags": [
+          "Vehicle"
+        ]
+      }
+    },
+    "/api/vehicle/getVehicle/{id}": {
+      "get": {
+        "operationId": "VehicleController_getVehicleById",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "summary": "ADMIN",
+        "tags": [
+          "Vehicle"
+        ]
+      }
+    },
+    "/api/vehicle/createVehicle": {
+      "post": {
+        "operationId": "VehicleController_createVehicle",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateVehicleDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "summary": "ADMIN",
+        "tags": [
+          "Vehicle"
+        ]
+      }
+    },
+    "/api/vehicle/updateVehicle/{vehicleId}": {
+      "patch": {
+        "operationId": "VehicleController_updateVehicle",
+        "parameters": [
+          {
+            "name": "vehicleId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateVehicleDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "summary": "ADMIN",
+        "tags": [
+          "Vehicle"
+        ]
+      }
+    },
+    "/api/vehicle/deleteVehicle/{vehicleId}": {
+      "delete": {
+        "operationId": "VehicleController_deleteVehicle",
+        "parameters": [
+          {
+            "name": "vehicleId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "summary": "ADMIN",
+        "tags": [
+          "Vehicle"
+        ]
+      }
     }
   },
   "info": {
@@ -970,6 +1136,45 @@
             ],
             "description": "Fuel Type",
             "example": "gasoline"
+          }
+        }
+      },
+      "CreateVehicleDto": {
+        "type": "object",
+        "properties": {
+          "templateId": {
+            "type": "string",
+            "description": "Vehicle Template id"
+          },
+          "plateNumber": {
+            "type": "string",
+            "description": "Plate Number",
+            "example": "34 ABC 1234"
+          },
+          "price": {
+            "type": "number",
+            "description": "Vehicle Price",
+            "example": 200
+          }
+        },
+        "required": [
+          "templateId",
+          "plateNumber",
+          "price"
+        ]
+      },
+      "UpdateVehicleDto": {
+        "type": "object",
+        "properties": {
+          "plateNumber": {
+            "type": "string",
+            "description": "Plate Number",
+            "example": "34 ABC 1234"
+          },
+          "price": {
+            "type": "number",
+            "description": "Vehicle Price",
+            "example": 200
           }
         }
       }
